--- a/generator.html
+++ b/generator.html
@@ -35,7 +35,7 @@
       <img class="planet" id="p6"></img>
     </div>
   
-    <script>
+    <script generate()>
       function generate() {
         var allImgs = ["desertplanet1.png", 
                        "savannaplanet1.png", 
