--- a/generator.html
+++ b/generator.html
@@ -35,7 +35,7 @@
       <img class="planet" id="p6"></img>
     </div>
   
-    <script generate()>
+    <script>
       function generate() {
         var allImgs = ["desertplanet1.png", 
                        "savannaplanet1.png", 
@@ -53,7 +53,8 @@
           pEl.src = allImgs[randomIndex];
         }
       }
+      generate();
     </script>
   </body>
 </html>
-<!--Version 0.7--->
+<!--Version 0.8--->
