--- a/generator.html
+++ b/generator.html
@@ -54,7 +54,7 @@
         }
       }
       function generatePosition() {
-        var planetElList = document.querySelecotrAll('#system1 .planet');
+        var planetElList = document.querySelectorAll('#system1 .planet');
         for (const pEl of planetElList) {
           var randomIndex = Math.floor(Math.random() * 400);
           pEL.style.top = randomIndex + "px";
@@ -67,4 +67,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.10--->
+<!--Version 0.11--->
