--- a/generator.html
+++ b/generator.html
@@ -57,8 +57,8 @@
         var planetElList = document.querySelectorAll('#system1 .planet');
         for (const pEl of planetElList) {
           var randomIndex = Math.floor(Math.random() * 400);
-          pEL.style.top = randomIndex + "px";
-          pEL.style.left = randomIndex + "px";
+          pEl.style.top = randomIndex + "px";
+          pEl.style.left = randomIndex + "px";
         }
       }
       //Instant Functions
@@ -67,4 +67,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.11--->
+<!--Version 0.12--->
