--- a/generator.html
+++ b/generator.html
@@ -6,9 +6,9 @@
     <style>
       body { background:#030a17; }
       img { image-rendering:pixelated; }
-      #system1 { position:absolute; width:400px; height:400px; top:20px; left:20px; }
+      #system1 { position:absolute; width:400px; height:400px; top:0px; left:0px; }
     
-      .planet { position:relative; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; }
+      .planet { position:relative; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; margin:50px; }
       .star { position:absolute; width:80px; height:80px; background:white; border-radius:50%; transition:0.5s; }
       
       #s1 { top:300px; left:420px; }
@@ -67,4 +67,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.12--->
+<!--Version 0.13--->
