--- a/generator.html
+++ b/generator.html
@@ -8,7 +8,7 @@
       img { image-rendering:pixelated; }
       #system1 { position:absolute; width:400px; height:400px; top:0px; left:0px; }
     
-      .planet { position:relative; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; margin:50px; }
+      .planet { position:relative; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; }
       .star { position:absolute; width:80px; height:80px; background:white; border-radius:50%; transition:0.5s; }
       
       #s1 { top:300px; left:420px; }
@@ -56,7 +56,7 @@
       function generatePosition() {
         var planetElList = document.querySelectorAll('#system1 .planet');
         for (const pEl of planetElList) {
-          var randomIndex = Math.floor(Math.random() * 400);
+          var randomIndex = Math.floor(Math.random() * 8) * 50;
           pEl.style.top = randomIndex + "px";
           pEl.style.left = randomIndex + "px";
         }
@@ -67,4 +67,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.13--->
+<!--Version 0.14--->
