--- a/generator.html
+++ b/generator.html
@@ -11,7 +11,7 @@
       .planet { position:absolute; width:50px; height:50px; background:gray; border-radius:50%; transition:0.5s; }
       .star { position:absolute; width:80px; height:80px; background:white; border-radius:50%; transition:0.5s; }
       
-      #s1 { }
+      #s1 { top:300px; left:420px; }
       #p1 { }
       #p2 { }
       #p3 { }
@@ -56,9 +56,10 @@
       function generatePosition() {
         var planetElList = document.querySelectorAll('#system1 .planet');
         for (const pEl of planetElList) {
-          var randomIndex = Math.floor(Math.random() * 5) * 80;
-          pEl.style.top = randomIndex + "px";
-          pEl.style.left = randomIndex + "px";
+          var randomTop = Math.floor(Math.random() * 5) * 80;
+          var randomLeft = Math.floor(Math.random() * 5) * 80;
+          pEl.style.top = randomTop + "px";
+          pEl.style.left = randomLeft + "px";
         }
       }
       //Instant Functions
@@ -67,4 +68,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.15--->
+<!--Version 0.16--->
