--- a/generator.html
+++ b/generator.html
@@ -56,10 +56,20 @@
       function generatePosition() {
         var planetElList = document.querySelectorAll('#system1 .planet');
         for (const pEl of planetElList) {
-          var randomTop = Math.floor(Math.random() * 5) * 80;
-          var randomLeft = Math.floor(Math.random() * 5) * 80;
-          pEl.style.top = randomTop + "px";
-          pEl.style.left = randomLeft + "px";
+          var allPositions = [["133px","185px"],
+                              ["225px","571px"],
+                              ["165px","265px"],
+                              ["415px","210px"],
+                              ["500px","715px"],
+                              ["145px","515px"],
+                              ["122px","717px"],
+                              ["417px","813px"],
+                              ["488px","717px"],
+                              ["214px","315px"]];
+          var randomIndex = Math.floor(Math.random() * allPositions.length);
+          var planetPosition = allPositions[randomIndex];
+          pEl.style.top = planetPosition[0];
+          pEl.style.left = planetPosition[1];
         }
       }
       //Instant Functions
@@ -68,4 +78,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.16--->
+<!--Version 0.17--->
