--- a/generator.html
+++ b/generator.html
@@ -36,7 +36,7 @@
     </div>
   
     <script>
-      function generate() {
+      function generateImgs() {
         var allImgs = ["desertplanet1.png", 
                        "savannaplanet1.png", 
                        "arcticplanet1.png", 
@@ -80,9 +80,9 @@
         }
       }
       //Instant Functions
-      generate();
+      generateImgs();
       generatePosition();
     </script>
   </body>
 </html>
-<!--Version 0.24--->
+<!--Version 0.25--->
