--- a/generator.html
+++ b/generator.html
@@ -60,6 +60,9 @@
     </div>
   
     <script>
+      //global variables
+      var newPlanet = null;
+      
       function survey(el) {
         console.log ("the function worked");
       }
@@ -124,4 +127,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.26--->
+<!--Version 0.27--->
