--- a/generator.html
+++ b/generator.html
@@ -19,7 +19,8 @@
       #p5 { }
       #p6 { }
       
-      .info-box { 
+      .info-box {
+        position:fixed;
         width: 170px;
         height: 300px;
         top:200px;
@@ -184,4 +185,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.33--->
+<!--Version 0.34--->
