--- a/generator.html
+++ b/generator.html
@@ -67,7 +67,7 @@
      <div class="info-box" id="info-box" onclick="hide(this)">
       <div class="cell top"></div>
       <div class="cell name"><span class="name" id="surveyName"> [variable] </span></div>
-      <div class="cell sprite"><img class="cell"></img></div>
+      <div class="cell sprite"><img class="cell" id="surveyImage"></img></div>
       <div class="cell habit"><p id="surveyHabit"> [% Habitability] </p></div>
       <div class="cell cost"><p id="surveyCost"> [# of Credits in Upkeep Cost] </p></div>
       <div class="cell desc"><p id="surveyDesc"> [desc] </p></div>
@@ -183,4 +183,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.36--->
+<!--Version 0.37--->
