--- a/generator.html
+++ b/generator.html
@@ -69,7 +69,7 @@
       <div class="cell name"><span class="name" id="surveyName"> [variable] </span></div>
       <div class="cell sprite"><img class="cell" id="surveyImage"></img></div>
       <div class="cell habit"><p id="surveyHabit"> [% Habitability] </p></div>
-      <div class="cell cost"><span id="surveyCost"> # </span><span> of Credits in Upkeep Cost </span></div>
+      <div class="cell cost"><span id="surveyCost"> # </span><span> Credits in Upkeep Cost </span></div>
       <div class="cell desc"><p id="surveyDesc"> [desc] </p></div>
       <div class="cell pop"><p> This planet contains <span id="surveyPop"> 0 </span> Population Units. </p></div>
       <div class="cell bottom"></div>
