--- a/generator.html
+++ b/generator.html
@@ -55,8 +55,10 @@
       .cost { grid-area: cost; text-align:center; }
       .cost span { font-size:120%; }
       .habit { grid-area:habit; text-align:center; }
-      .desc { grid-area: desc; text-align:center; font-size:85%; }
+      .habit span { font-size:120%; }
+      .desc { grid-area: desc; text-align:center; font-size:90%; }
       .pop { grid-area: pop; text-align:center; }
+      .pop span { font-size:120% }
       .top { grid-area: top; gap:0px; display:none; }
       .bottom { grid-area: bottom; gap:0px; display:none; }
     </style>
