--- a/generator.html
+++ b/generator.html
@@ -61,6 +61,7 @@
       .pop span { font-size:120% }
       .top { grid-area: top; gap:0px; display:none; }
       .bottom { grid-area: bottom; gap:0px; display:none; }
+      #surveyImage { background:grey; border-radius:50%; }
     </style>
     
   </head>
@@ -187,4 +188,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.39--->
+<!--Version 0.40--->
