--- a/generator.html
+++ b/generator.html
@@ -75,7 +75,7 @@
       <div class="cell habit"><p id="surveyHabit"> [% Habitability] </p></div>
       <div class="cell cost"><span id="surveyCost"> # </span><span> Credits in Upkeep Cost </span></div>
       <div class="cell desc"><p id="surveyDesc"> [desc] </p></div>
-      <div class="cell pop"><p> This planet contains <span id="surveyPop"> 0 </span> Population Units. </p></div>
+      <div class="cell pop"><span> This planet contains </span><span id="surveyPop"> 0 </span><span> Population Units. </span></div>
       <div class="cell bottom"></div>
     </div>
     
