--- a/generator.html
+++ b/generator.html
@@ -24,7 +24,7 @@
         width: 210px;
         height: 300px;
         top:100px;
-        left:1100px;
+        left:1050px;
         font-family: 'MedievalSharp', cursive; 
         font-size:80%;
         border: 2px solid lightgray;
@@ -108,32 +108,33 @@
         var biome = el.biome;
         var survey = {
           desert: { surveyName: "Desert World", surveyImage: "desertplanet1.png", surveyCost: "10", 
-                   surveyHabit: "TBD" }, 
+                   surveyHabit: "TBD", surveyDesc: "Your scans of the planet show nothing but endless seas of dunes dotted with cacti and the occasional mesa or oasis."}, 
           savanna: { surveyName: "Savanna World", surveyImage: "savannaplanet1.png", surveyCost: "10", 
-                    surveyHabit: "TBD" },
+                    surveyHabit: "TBD", surveyDesc: "The grasslands of this planet stretch to the horizon, dotted with trees, caves, hills, and small oceans." },
           arctic: { surveyName: "Arctic World", surveyImage: "arcticplanet1.png", surveyCost: "10", 
-                   surveyHabit: "TBD" },
+                   surveyHabit: "TBD", surveyDesc: "This planet is a barren, freezing, thick floe of ice. It may have once been an Ocean World, but has frozen long since." },
           tundra: { surveyName: "Tundra World", surveyImage: "tundraplanet1.png", surveyCost: "10", 
-                   surveyHabit: "TBD" },
+                   surveyHabit: "TBD", surveyDesc: "What was probably once a rolling green-hilled planet has been frozen to its core. It is still suitable for life, however." },
           continental: { surveyName: "Continental World", surveyImage: "continentalplanet1.png", surveyCost: "10", 
-                        surveyHabit: "TBD" },
+                        surveyHabit: "TBD", surveyDesc: "The hills and valleys of this planet are a brilliant, verdant green, changing with the passing of the seasons." },
           ocean: { surveyName: "Ocean World", surveyImage: "oceanplanet1.png", surveyCost: "10", 
-                  surveyHabit: "TBD" },
+                  surveyHabit: "TBD", surveyDesc: "This planet is entirely a massive ocean, bound to a small rock core by a strong magnetic field." },
           relic: { surveyName: "Relic World", surveyImage: "relicplanet1.png", surveyCost: "15", 
-                  surveyHabit: "70% Habitable" },
+                  surveyHabit: "70% Habitable", surveyDesc: "An ancient civilization inhabited this planet, leaving the endless ruins of massive cities behind." },
           mineral1: { surveyName: "Rocky World", surveyImage: "mineralplanet1.png", surveyCost: "6", 
-                     surveyHabit: "Unhabitable" },
+                     surveyHabit: "Unhabitable", surveyDesc: "This planet is hot and grim, but relatively rich in minerals. It is not suitable for life." },
           mineral2: { surveyName: "Volcanic World", surveyImage: "mineralplanet2.png", surveyCost: "6", 
-                     surveyHabit: "Unhabitable" },
+                     surveyHabit: "Unhabitable", surveyDesc: "There are no hills nor valleys on this planet, only massive lava-filled crevices. It is not suitable for life." },
           mineral3: { surveyName: "Ringed World", surveyImage: "mineralplanet3.png", surveyCost: "6", 
-                     surveyHabit: "Unhabitable" },
+                     surveyHabit: "Unhabitable", surveyDesc: "A moderately sized gas giant with a small assortment of rings rich in minerals. It is not suitable for life." },
           barren: { surveyName: "Barren", surveyImage: "barrenplanet1.png", surveyCost: "N/A", 
-                   surveyHabit: "Unhabitable" }
+                   surveyHabit: "Unhabitable", surveyDesc: "Scanning the planet shows nothing of importance, lacking major deposits of resources. It is not suitable for life." }
         }
         $("surveyName").innerText = survey[el.biome].surveyName;
         $("surveyImage").src = survey[el.biome].surveyImage;
         $("surveyCost").innerText = survey[el.biome].surveyCost;
         $("surveyHabit").innerText = survey[el.biome].surveyHabit;
+        $("surveyDesc").innerText = survey[el.biome].surveyDesc;
       }
       
       //system generation
@@ -200,4 +201,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.43--->
+<!--Version 0.44--->
