--- a/generator.html
+++ b/generator.html
@@ -130,7 +130,7 @@
           barren: { surveyName: "Barren", surveyImage: "barrenplanet1.png", surveyCost: "N/A", 
                    surveyHabit: "Unhabitable", surveyDesc: "Scanning the planet shows nothing of importance, lacking major deposits of resources. It is not suitable for life." },
           junk: { surveyName: "Junk World", surveyImage: "junkplanet1.png", surveyCost: "N/A", 
-                     surveyHabit: "Unhabitable", surveyDesc: "This planet was once used as a gargantuan junkyard, piled miles high with minerals. It is not suitable for life." }
+                     surveyHabit: "Unhabitable", surveyDesc: "This planet was once used as a gargantuan junkyard, piled miles high with ruins. It is not suitable for life." }
         }
         $("surveyName").innerText = survey[el.biome].surveyName;
         $("surveyImage").src = survey[el.biome].surveyImage;
