--- a/hud.html
+++ b/hud.html
@@ -15,11 +15,11 @@
         gap:0px;
         transition:0.4s
       }
-      .top { grid-area:top; background:#1d4b96; }
-      .bottom { grid-area:bottom; background:#1d4b96; }
-      .cell { position:relative; padding:3px; overflow:hidden; font-family: 'MedievalSharp', cursive; }
-      .cell p { overflow:hidden; font-size:80%; font-family: 'MedievalSharp', cursive; }
-      .cell span { overflow:hidden; font-size:80%; }
+      .HUDtop { grid-area:top; background:#1d4b96; }
+      .HUDbottom { grid-area:bottom; background:#1d4b96; }
+      .HUDcell { position:relative; padding:3px; overflow:hidden; font-family: 'MedievalSharp', cursive; }
+      .HUDcell p { overflow:hidden; font-size:80%; font-family: 'MedievalSharp', cursive; }
+      .HUDcell span { overflow:hidden; font-size:80%; }
       .margin1 { grid-area:margin1; }
       .margin2 { grid-area:margin2; }
       .margin3 { grid-area:margin3; }
@@ -49,20 +49,20 @@
   </head>
   <body>
     <div class="HUD">
-      <div class="cell top"></div>
-      <div class="cell margin1"></div>
-      <div class="cell mineralIcon"><img id="HUDMineralIcon" src="gemstoneicon.png"></img></div>
-      <div class="cell mineralNumber"><span id="HUDMineralNumber"> 50 </span></div>
-      <div class="cell margin2"></div>
-      <div class="cell creditIcon"><img id="HUDCreditIcon" src="crediticon.png"></img></div>
-      <div class="cell creditNumber"><span id="HUDCreditNumber"> 50 </span></div>
-      <div class="cell margin3"></div>
-      <div class="cell authorityIcon"><img id="HUDAuthorityIcon" src="authorityicon.png"></img></div>
-      <div class="cell authorityNumber"><span id="HUDAuthorityNumber"> 50 </span></div>
-      <div class="cell margin4"></div>
-      <div class="cell supplyIcon"><img id="HUDSupplyIcon" src="supplyicon.png"></img></div>
-      <div class="cell supplyNumber"><span id="HUDSupplyNumber"> 50 </span></div>
-      <div class="cell bottom"></div>
+      <div class="HUDcell HUDtop"></div>
+      <div class="HUDcell margin1"></div>
+      <div class="HUDcell mineralIcon"><img id="HUDMineralIcon" src="gemstoneicon.png"></img></div>
+      <div class="HUDcell mineralNumber"><span id="HUDMineralNumber"> 50 </span></div>
+      <div class="HUDcell margin2"></div>
+      <div class="HUDcell creditIcon"><img id="HUDCreditIcon" src="crediticon.png"></img></div>
+      <div class="HUDcell creditNumber"><span id="HUDCreditNumber"> 50 </span></div>
+      <div class="HUDcell margin3"></div>
+      <div class="HUDcell authorityIcon"><img id="HUDAuthorityIcon" src="authorityicon.png"></img></div>
+      <div class="HUDcell authorityNumber"><span id="HUDAuthorityNumber"> 50 </span></div>
+      <div class="HUDcell margin4"></div>
+      <div class="HUDcell supplyIcon"><img id="HUDSupplyIcon" src="supplyicon.png"></img></div>
+      <div class="HUDcell supplyNumber"><span id="HUDSupplyNumber"> 50 </span></div>
+      <div class="HUDcell HUDbottom"></div>
     </div>
 
     <button id="button1" onclick="indebtMinerals()"> Click to spend Minerals </button>
