--- a/bootup.html
+++ b/bootup.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <style>
-    body { background:#030a17; }
+      body { background:#030a17; }
+    </style>
   </head>
   <body>
     <p> TEST-1 </p>  
