--- a/generator.html
+++ b/generator.html
@@ -197,6 +197,7 @@
                        ["mineralplanet3.png", "mineral3"],
                        ["barrenplanet1.png", "barren"],
                        ["barrenplanet1.png", "barren"],
+                       ["barrenplanet1.png", "barren"],
                        ["junkplanet1.png",   "junk"]];
         var planetElList = $$('#system1 .planet');
         for (const pEl of planetElList) {
@@ -245,4 +246,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.48--->
+<!--Version 0.49--->
