--- a/events.html
+++ b/events.html
@@ -107,7 +107,7 @@
       <div class="menuCell menuTop"></div>
       <div class="menuCell menuButton1"><button id="menuButton1"> Survey System </button></div>
       <div class="menuCell menuSurveyIcon"><img id="menuSurveyIcon" src="surveyicon.png"></img></div>
-      <div class="menuCell menuButton2"><button id="menuButton2"> Build Mining Station </button></div></div>
+      <div class="menuCell menuButton2"><button id="menuButton2"> Build Mining Station </button></div>
       <div class="menuCell menuMineralIcon"><img id="menuMineralIcon" src="gemstoneicon.png"></img></div>
       <div class="menuCell menuButton3"><button id="menuButton3"> Build Colony </button></div>
       <div class="menuCell menuCreditIcon"><img id="menuCreditIcon" src="crediticon.png"></img></div>
