--- a/events.html
+++ b/events.html
@@ -52,9 +52,9 @@
         background: #1d4b96;
         transition:0.4s;
       }
-      .planetMenu { position:absolute; top:20px; left:20px; width: 100px; height: 300px; font-family: 'MedievalSharp', cursive; 
+      .planetMenu { position:absolute; top:20px; left:20px; width: 180px; height: 140px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: inline-grid; margin: 15px;
-        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 30px 80px 80px 80px 30px;
+        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 10px 40px 40px 40px 10px;
         grid-template-areas:
           "menuTop      menuTop      menuTop"
           "menuButton1  menuButton1  menuSurveyIcon"
@@ -94,9 +94,9 @@
       #menuSurveyIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #menuMineralIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
       #menuCreditIcon { image-rendering:pixelated; position:relative; height:25px; width:25px; }
-      #menuButton1 { border-radius:10%; background:navy; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
-      #menuButton2 { border-radius:10%; background:navy; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
-      #menuButton3 { border-radius:10%; background:navy; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
+      #menuButton1 { border-radius:20%; background:navy; color:white; font-family:'MedievalSharp', cursive; width:110px; margin:1px; font-size:80%; }
+      #menuButton2 { border-radius:20%; background:navy; color:white; font-family:'MedievalSharp', cursive; width:110px; margin:1px; font-size:80%; }
+      #menuButton3 { border-radius:20%; background:navy; color:white; font-family:'MedievalSharp', cursive; width:110px; margin:1px; font-size:80%; }
       
     </style>
   </head>
@@ -147,4 +147,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.24--->
+<!--Version 0.25--->
