--- a/events.html
+++ b/events.html
@@ -54,7 +54,7 @@
       }
       .planetMenu { position:absolute; top:20px; left:20px; width: 180px; height: 140px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: inline-grid; margin: 15px;
-        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 10px 40px 40px 40px 10px;
+        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 2px 48px 40px 40px 10px;
         grid-template-areas:
           "menuTop      menuTop      menuTop"
           "menuButton1  menuButton1  menuSurveyIcon"
@@ -82,8 +82,8 @@
       
       .menuCell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
       .menuCell p { font-family: 'MedievalSharp', cursive; font-size:110%; }
-      .menuTop { grid-area:menuTop; }
-      .menuBottom { grid-area:menuBottom; }
+      .menuTop { grid-area:menuTop; display:none; }
+      .menuBottom { grid-area:menuBottom; display:none; }
       .menuButton1 { grid-area:menuButton1; }
       .menuButton2 { grid-area:menuButton2; }
       .menuButton3 { grid-area:menuButton3; }
