--- a/generator.html
+++ b/generator.html
@@ -158,7 +158,7 @@
       <img class="planet" id="p6"></img>
     </div>
 
-    <div class="planetMenu" id="planetMenu">
+    <div class="planetMenu" id="planetMenu" onmouseenter="show(this)">
       <div class="menuCell menuButton1"><button id="menuButton1" onclick="survey()"> Survey System </button></div>
       <div class="menuCell menuSurveyIcon"><img id="menuSurveyIcon" src="surveyicon.png"></img></div>
       <div class="menuCell menuButton2"><button id="menuButton2"> Build Mining Station </button></div>
@@ -307,7 +307,12 @@
         }
       }
       
-      
+      function show(el) {
+        el.style.display = "inline-grid";
+        setTimeout(function(){
+          hide(el)
+        },1400);
+      }
       function hide(el) {
         el.style.display = "none";
       }
@@ -321,4 +326,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.55--->
+<!--Version 0.57--->
