--- a/generator.html
+++ b/generator.html
@@ -158,7 +158,7 @@
       <img class="planet" id="p6"></img>
     </div>
 
-    <div class="planetMenu" id="planetMenu" onmouseenter="show(this)">
+    <div class="planetMenu" id="planetMenu" onmouseenter="preventMenuClose()">
       <div class="menuCell menuButton1"><button id="menuButton1" onclick="survey()"> Survey System </button></div>
       <div class="menuCell menuSurveyIcon"><img id="menuSurveyIcon" src="surveyicon.png"></img></div>
       <div class="menuCell menuButton2"><button id="menuButton2"> Build Mining Station </button></div>
@@ -190,10 +190,7 @@
         planetMenu.style.top = newTop + "px";
         var newLeft = el.offsetLeft + 70;
         planetMenu.style.left = newLeft + "px";
-        if (unselectTimeoutId) {
-          cancelTimeout(unSelectTimeout);
-          unselectTimeoutId = null;
-        }
+        preventMenuClose();
       }
       function preunselectPlanet(ev) {
         unselectTimeoutId = setTimeout(function(){
@@ -207,6 +204,12 @@
         el.style.padding = "0px";
         var planetMenu = $("planetMenu");
         planetMenu.style.display = "none";
+      }
+      function preventMenuClose(){
+        if (unselectTimeoutId) {
+          cancelTimeout(unSelectTimeout);
+          unselectTimeoutId = null;
+        }
       }
       
       function survey() {
@@ -307,12 +310,6 @@
         }
       }
       
-      function show(el) {
-        el.style.display = "inline-grid";
-        setTimeout(function(){
-          hide(el)
-        },1400);
-      }
       function hide(el) {
         el.style.display = "none";
       }
@@ -326,4 +323,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.57--->
+<!--Version 0.58--->
