--- a/generator.html
+++ b/generator.html
@@ -207,7 +207,7 @@
       }
       function preventMenuClose(){
         if (unselectTimeoutId) {
-          clearTimeout(unSelectTimeoutId);
+          clearTimeout(unselectTimeoutId);
           unselectTimeoutId = null;
         }
       }
@@ -323,4 +323,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.60--->
+<!--Version 0.61--->
