--- a/generator.html
+++ b/generator.html
@@ -158,7 +158,7 @@
       <img class="planet" id="p6"></img>
     </div>
 
-    <div class="planetMenu" id="planetMenu" onmouseenter="preventMenuClose()">
+    <div class="planetMenu" id="planetMenu" onmouseenter="preventMenuClose()" onmouseout="preunselectPlanet()">
       <div class="menuCell menuButton1"><button id="menuButton1" onclick="survey()"> Survey System </button></div>
       <div class="menuCell menuSurveyIcon"><img id="menuSurveyIcon" src="surveyicon.png"></img></div>
       <div class="menuCell menuButton2"><button id="menuButton2"> Build Mining Station </button></div>
@@ -198,12 +198,12 @@
         },1400);
       }
       function unselectPlanet(ev) {
-        let el = ev.target;
-        lastSelectedPlanet = null;
+        let el = $(lastSelectedPlanet);
         el.style.background = "gray";
         el.style.padding = "0px";
         var planetMenu = $("planetMenu");
         planetMenu.style.display = "none";
+        lastSelectedPlanet = null;
       }
       function preventMenuClose(){
         if (unselectTimeoutId) {
@@ -323,4 +323,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.61--->
+<!--Version 0.62--->
