--- a/generator.html
+++ b/generator.html
@@ -158,7 +158,7 @@
       <img class="planet" id="p6"></img>
     </div>
 
-    <div class="planetMenu" id="planetMenu" onmouseenter="preventMenuClose()" onmouseout="onMenuExit()">
+    <div class="planetMenu" id="planetMenu">
       <div class="menuCell menuButton1"><button id="menuButton1" onclick="survey()"> Survey System </button></div>
       <div class="menuCell menuSurveyIcon"><img id="menuSurveyIcon" src="surveyicon.png"></img></div>
       <div class="menuCell menuButton2"><button id="menuButton2"> Build Mining Station </button></div>
@@ -170,7 +170,6 @@
     <script>
       //global variables
       var lastSelectedPlanet = null;
-      var unselectTimeoutId = null;
       
       function $ (id) {
         return document.getElementById(id);
@@ -190,28 +189,18 @@
         planetMenu.style.top = newTop + "px";
         var newLeft = el.offsetLeft + 70;
         planetMenu.style.left = newLeft + "px";
-        preventMenuClose();
       }
-      function preunselectPlanet() {
-        unselectTimeoutId = setTimeout(function(){
-          unselectPlanet();
-        },1400);
+      function preunselectPlanet(ev) {
+        setTimeout(function(){
+          unselectPlanet(ev);
+        },2000);
       }
-      function unselectPlanet() {
-        let el = $(lastSelectedPlanet);
+      function unselectPlanet(ev) {
+        let el = ev.target;
         el.style.background = "gray";
         el.style.padding = "0px";
         var planetMenu = $("planetMenu");
         planetMenu.style.display = "none";
-      }
-      function preventMenuClose() {
-        if (unselectTimeoutId) {
-          clearTimeout(unselectTimeoutId);
-          unselectTimeoutId = null;
-        }
-      }
-      function onMenuExit() {
-        unselectPlanet();
       }
       
       function survey() {
@@ -325,4 +314,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.63--->
+<!--Version 0.64--->
